# git-xrays

./: .gitignore  CLAUDE.md  README.md  SPEC.md  pyproject.toml  requirements.txt
src/git_xrays/application/: use_cases.py
src/git_xrays/domain/: models.py  ports.py
src/git_xrays/infrastructure/: ast_analyzer.py  clustering_engine.py  complexity_analyzer.py  dx_engine.py  effort_engine.py  git_cli_reader.py  git_source_reader.py  god_class_analyzer.py  java_anemic_analyzer.py  java_complexity_analyzer.py  java_god_class_analyzer.py  run_store.py
src/git_xrays/interface/: cli.py
src/git_xrays/web/: api.py  dashboard.py  models.py  server.py
tests/: conftest.py
tests/application/: fakes.py  test_use_cases.py
tests/domain/: test_models.py
tests/infrastructure/: test_ast_analyzer.py  test_clustering_engine.py  test_complexity_analyzer.py  test_dx_engine.py  test_effort_engine.py  test_git_cli_reader.py  test_git_source_reader.py  test_god_class_analyzer.py  test_java_anemic_analyzer.py  test_java_complexity_analyzer.py  test_java_god_class_analyzer.py  test_numstat_parser.py  test_run_store.py
tests/interface/: test_cli.py
tests/web/: test_api.py  test_server.py
