[project]
name = "git-xrays"
version = "0.1.0"
description = "Behavioral & Architectural Code Intelligence Platform"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
analyze-repo = "git_xrays.interface.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/git_xrays"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
