[project]
name = "git-xrays"
version = "0.1.0"
description = "Behavioral & Architectural Code Intelligence Platform"
requires-python = ">=3.13"
dependencies = ["duckdb>=1.0"]

[project.optional-dependencies]
test = ["pytest>=8.0"]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "streamlit>=1.35",
    "httpx>=0.27",
    "plotly>=5.20",
]

[project.scripts]
analyze-repo = "git_xrays.interface.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/git_xrays"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
